deps/v8/test/message/syntactic-tail-call-in-binop-rhs.out
*%(basename)s:13: SyntaxError: Tail call expression is not allowed here
  return b + continue f()  ;
             ^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
